--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <button class="custom-btn btn-15">Read More16</button>
   <button class="custom-btn btn-16">Read More17</button>
   <p style="font-family: Andale Mono, monospace;">
-    DEERBUCKS.DESIGNING</p>
+   &copy;Akshay Padmashali <br/> (NMAMIT, Nitte)</p>
 </div>
     
 </body>
